--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Get merge log
         id: merge-log
         run: |
+                 
               merge_log=$(git show 036bd184ae | tail -n +5)
               
               echo "$merge_log" 
@@ -75,9 +76,24 @@ jobs:
       - name: Parse changed files
         id: parsed-output
         run: |      
-                echo "MODIFIED= $(echo ${{steps.changed-files.outputs.modified_files}} |  sed 's/\,/\\n/g' )" >> $GITHUB_ENV
-                echo "ADDED= $(echo ${{steps.changed-files.outputs.added_files}} |  sed 's/\,/\\n/g' )" >> $GITHUB_ENV
-                echo "DELETED= $(echo ${{steps.changed-files.outputs.deleted_files}} |  sed 's/\,/\\n/g' )" >> $GITHUB_ENV
+                modified=$(echo ${{steps.changed-files.outputs.modified_files}} |  sed 's/\,/\\n/g' )
+                echo "$modified" 
+                echo 'MODIFIED<<EOF' >> $GITHUB_ENV
+                echo "$modified" >> $GITHUB_ENV
+                echo 'EOF' >> $GITHUB_ENV
+
+                added=$(echo ${{steps.changed-files.outputs.added_files}} |  sed 's/\,/\\n/g' )
+                echo "$added" 
+                echo 'ADDED<<EOF' >> $GITHUB_ENV
+                echo "$ADDED" >> $GITHUB_ENV
+                echo 'EOF' >> $GITHUB_ENV
+
+                deleted=$(echo ${{steps.changed-files.outputs.deleted_files}} |  sed 's/\,/\\n/g' )
+                echo "$deleted" 
+                echo 'DELETED<<EOF' >> $GITHUB_ENV
+                echo "$deleted" >> $GITHUB_ENV
+                echo 'EOF' >> $GITHUB_ENV
+ 
 
       - name: Send mail  
         uses: dawidd6/action-send-mail@v3
