--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -74,13 +74,13 @@ jobs:
       - name: Parse changed files
         id: parsed-output
         run: |      
-              modified=$(echo ${{steps.changed-files.outputs.modified_files}} |  sed 's/\,/\\n/g' )
+              modified="$(echo ${{steps.changed-files.outputs.modified_files}} |  sed 's/\,/\\n/g' )"
                 echo "$modified" 
                 echo 'MODIFIED<<EOF' >> $GITHUB_ENV
                 echo "$modified" >> $GITHUB_ENV
                 echo 'EOF' >> $GITHUB_ENV
 
-                added=$(echo ${{steps.changed-files.outputs.added_files}} |  sed 's/\,/\\n/g' )
+                modified='$(echo ${{steps.changed-files.outputs.modified_files}} |  sed 's/\,/\\n/g' )''
                 echo "$added" 
                 echo 'ADDED<<EOF' >> $GITHUB_ENV
                 echo "$ADDED" >> $GITHUB_ENV
