DO NOT MERGE --TESTING ONLY. fixed indentation
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -106,10 +106,10 @@ jobs:
            # Optional (recommended) mail server password:
            password: zdochkqdfehdtiek
            # Required mail subject:
-           subject: "[Chapel Merge] ${{github.event.pull_request.title}}"
+           subject: "TESTING -- IGNORE plain body + merge log changes [Chapel Merge] ${{github.event.pull_request.title}}"
            # Required recipients' addresses:
            #to: chapel+commits@discoursemail.com
-           to: bhavani@hpe.com
+           to: bhavani@hpe.com, chapel+staff@discoursemail.com 
            # Required sender full name (address can be skipped):
            from:  ${{env.AUTHOR}}
            body: |
