--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -95,7 +95,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: make check_llvm_none
       run: |
-       CHPL_LLVM=none make check
+       CHPL_LLVM=none ./util/printchplenv --all make make check
        CHPL_HOME=$PWD ./util/test/run-in-test-venv.bash ./examples/hello.chpl
 
 
