--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -26,7 +26,7 @@ jobs:
         run: |      
               echo "LINK=$(echo $PR_LINK )" >> $GITHUB_ENV   
               echo "AUTHOR=$(echo ${{github.event.pull_request.head.user.login}})" >> $GITHUB_ENV
-              echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
+              echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
               echo "FILES_CHANGED=$(echo '$PR_LINK/files' )" >> $GITHUB_ENV     
   
       - name: checkout
