Build both backends for gasnet and gasnet-smp images
Signed-off-by: Anna Rift <anna.rift@hpe.com>

--- a/util/packaging/docker/gasnet-smp/Dockerfile
+++ b/util/packaging/docker/gasnet-smp/Dockerfile
@@ -9,6 +9,7 @@ ENV CHPL_RT_OVERSUBSCRIBED yes
 # is far too small for us, so use the SystemV implementation instead.
 ENV CHPL_GASNET_MORE_CFG_OPTIONS "--disable-pshm-posix --enable-pshm-sysv"
 
-RUN make -C $CHPL_HOME \
+RUN CHPL_TARGET_COMPILER=llvm make -C $CHPL_HOME \
+    && CHPL_TARGET_COMPILER=gnu make -C $CHPL_HOME \
     && make -C $CHPL_HOME chpldoc test-venv mason \
     && make -C $CHPL_HOME cleanall
