--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -95,7 +95,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: make check_llvm_none
       run: |
-       CHPL_LLVM=none make ./util/buildRelease/smokeTest chpl      
+       CHPL_LLVM=none make     
 
   check_annotations_rt_calls:
     runs-on: ubuntu-latest
