test CHPL_LLVM=none in git CI. remove printenv. set CHPL_HOME
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -117,8 +117,8 @@ jobs:
         ./util/devel/lookForBadRTCalls
     - name: check annotations
       run: |
-        CHPL_LLVM=none make test-venv make check
-        CHPL_LLVM=none CHPL_HOME=$PWD ./util/test/run-in-test-venv.bash ./util/test/check_annotations.py
+        CHPL_LLVM=none make test-venv 
+        CHPL_LLVM=none CHPL_HOME=$PWD make check ./util/test/run-in-test-venv.bash ./util/test/check_annotations.py
     - name: smokeTest lint
       run: |
         ./util/buildRelease/smokeTest lint
