test CHPL_LLVM=none in git CI. remove printenv. set CHPL_HOME
Signed-off-by: bhavanijayakumaran <82669529+bhavanijayakumaran@users.noreply.github.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -95,9 +95,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: make check_llvm_none
       run: |
-       CHPL_LLVM=none make 
-       make check    
-       CHPL_LLVM=none CHPL_HOME=$PWD 
+       CHPL_LLVM=none make    
+       CHPL_LLVM=none CHPL_HOME=$PWD  make check
   check_annotations_rt_calls:
     runs-on: ubuntu-latest
     container:
@@ -118,8 +117,7 @@ jobs:
     - name: check annotations
       run: |
         CHPL_LLVM=none make test-venv 
-        CHPL_HOME=$PWD make check
-        CHPL_LLVM=none  ./util/test/run-in-test-venv.bash ./util/test/check_annotations.py
+        CHPL_LLVM=none CHPL_HOME=$PWD ./util/test/run-in-test-venv.bash ./util/test/check_annotations.py
     - name: smokeTest lint
       run: |
         ./util/buildRelease/smokeTest lint
