Create a Thunk node used for deferring builders.
Signed-off-by: Danila Fedorin <daniel.fedorin@hpe.com>

--- a/compiler/AST/CMakeLists.txt
+++ b/compiler/AST/CMakeLists.txt
@@ -57,6 +57,7 @@ set(SRCS
     stmt.cpp
     symbol.cpp
     TransformLogicalShortCircuit.cpp
+    Thunk.cpp
     TryStmt.cpp
     type.cpp
     UseStmt.cpp
