increase log level of printchplenv output
Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ set(CHPL_BUILD_VERSION 0)
 
 # Flip this to 'true' when we're ready to roll out a release; then back
 # after branching
-set(CHPL_OFFICIAL_RELEASE true)
+set(CHPL_OFFICIAL_RELEASE false)
 
 ### END config.h version value setting - configured_prefix set below ###
 
@@ -61,47 +61,6 @@ message(STATUS "Configuring Chapel version: ${CMAKE_PROJECT_VERSION}")
 # cmake_print_variables(MY_VARIABLE)
 include(CMakePrintHelpers)
 
-### BEGIN Debug options ###
-
-# Turns on verbose output from Makefile builds. Having it ON displays each
-# command line as it is launched.
-# https://cmake.org/cmake/help/latest/variable/CMAKE_VERBOSE_MAKEFILE.html
-if (DEFINED ENV{CMAKE_VERBOSE_MAKEFILE})
-  set(CMAKE_VERBOSE_MAKEFILE $ENV{CMAKE_VERBOSE_MAKEFILE})
-else()
-  set(CMAKE_VERBOSE_MAKEFILE OFF)
-endif()
-
-# Turn this OFF to stop seeing the results of printchplenv everytime it's called
-# from the cmake configure step
-if (DEFINED ENV{CHPL_CMAKE_PRINTCHPLENV_RESULTS})
-  SET(PRINTCHPLENV_RESULTS $ENV{CHPL_CMAKE_PRINTCHPLENV_RESULTS})
-else()
-  SET(PRINTCHPLENV_RESULTS OFF)
-endif()
-
-
-# Set the log level to one of ERROR, WARNING, NOTICE, STATUS (default), VERBOSE,
-# DEBUG, or TRACE
-# anything above NOTICE will also silence PRINTCHPLENV output
-if (DEFINED CHPL_CMAKE_VERBOSE)
-  if (CHPL_CMAKE_VERBOSE)
-    set(CMAKE_MESSAGE_LOG_LEVEL STATUS)
-    set(CMAKE_VERBOSE_MAKEFILE ON)
-    message(STATUS "############## VERBOSE MAKEFILES ON ##############")
-  else()
-    message(STATUS "$$$$$ BE VEWY VEWY QWUIET $$$$$")
-    set(CMAKE_MESSAGE_LOG_LEVEL WARNING)
-    set(CMAKE_VERBOSE_MAKEFILE OFF)
-  endif()
-  unset(CHPL_CMAKE_VERBOSE CACHE)
-else()
-  set(CMAKE_MESSAGE_LOG_LEVEL STATUS)
-  set(CMAKE_VERBOSE_MAKEFILE OFF)
-  message(STATUS "#### DEFAULT NOISE LEVEL ####")
-endif()
-
-### END Debug options ###
 
 ### BEGIN handling installation mode from ./configure - prefix or home are allowed ###
 if (NOT DEFINED INSTALLATION_MODE)
@@ -330,9 +289,8 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E env
                 OUTPUT_VARIABLE CHPLENV_OUTPUT
                 OUTPUT_STRIP_TRAILING_WHITESPACE
                 )
-if (PRINTCHPLENV_RESULTS)
-  message(NOTICE "Updating build configuration with results from printchplenv:\n${CHPLENV_OUTPUT}")
-endif()
+
+message(VERBOSE "Updating build configuration with results from printchplenv:\n${CHPLENV_OUTPUT}")
 
 # This is a workaround for CMake not having any in-built way to
 # split a string into a list.  It's not perfect, but it works for this purpose
@@ -344,9 +302,7 @@ foreach (CHPLENV_LINE IN LISTS CHPLENV_OUTPUT)
   # Split the line into the parts we want, variable name and value
   string(FIND "${CHPLENV_LINE}" " " SPLIT_POS)
   if (SPLIT_POS LESS 1)
-    if (NOT ${PRINTCHPLENV_RESULTS})
-      message(NOTICE "${CHPLENV_LINE} did not contain a value - unsetting")
-    endif()
+    message(VERBOSE "${CHPLENV_LINE} did not contain a value - unsetting")
     unset(${CHPLENV_LINE} CACHE)
     continue()
   endif()
