Add support for linking annotations to private issues
Historically annotations have just linked to PRs responsible for
changes, but sometimes performance changes from other factors and it can
be nice to link to issues that contain more detail. Add support for that
here.

Signed-off-by: Elliot Ronaghan <ronawho@gmail.com>

--- a/test/ANNOTATIONS.yaml
+++ b/test/ANNOTATIONS.yaml
@@ -1088,6 +1088,8 @@ LCALS-raw-short: &lcals-base
     - Task intents to operate on fields of 'this' (#13840)
   09/10/19:
     - Restrict applicability of field intents (#14057)
+  02/14/23:
+    - LCALS perf back to normal (Cray/chapel-private#4228)
 LCALS-raw-medium:
   <<: *lcals-base
 LCALS-raw-long:
