Add first draft of query to compute module initialization order
Signed-off-by: David Longnecker <dlongnecke-cray@users.noreply.github.com>

--- a/frontend/test/resolution/CMakeLists.txt
+++ b/frontend/test/resolution/CMakeLists.txt
@@ -38,6 +38,7 @@ comp_unit_test(testLoopIndexVars)
 comp_unit_test(testMaybeConst)
 comp_unit_test(testMethodCalls)
 comp_unit_test(testMethodFieldAccess)
+comp_unit_test(testModuleInitOrder)
 comp_unit_test(testMultiDecl)
 comp_unit_test(testNew)
 comp_unit_test(testOperatorOverloads)
