--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -28,12 +28,13 @@ jobs:
               echo "AUTHOR=$(echo ${{github.event.pull_request.head.user.login}})" >> $GITHUB_ENV
               echo "COMPARE_URL= $( echo '${{github.event.repository.html_url}}/compare/${{github.event.pull_request.base.sha}}...${{ github.event.pull_request.merge_commit_sha}}' )" >> $GITHUB_ENV      
               echo "FILES_CHANGED=$(echo '$PR_LINK/files' )" >> $GITHUB_ENV     
-  
       - name: checkout
         uses: actions/checkout@v3
         # To get git diff on the files that were changed in the PR checkout with fetch-depth 2.
         with:
           fetch-depth: 0 
+
+
       # this step will (1) get the merge log for the merge_commit_sha and save it to the git  actions EN for later use in the email body. 
       # (2) Get the files changed on the merge commit using the git log --name-status command.
       - name: Get merge log
@@ -52,7 +53,18 @@ jobs:
               echo 'DIFF<<EOF' >> $GITHUB_ENV
               echo "$diff" >> $GITHUB_ENV
               echo 'EOF' >> $GITHUB_ENV                   
-      
+      - name: get main-head
+        run: | 
+             git checkout main
+             git remote add upstream https://github.com/chapel-lang/chapel
+             git fetch upstream main 
+             head_sha=$(git rev-parse upstream/main)
+             diff=$(git --no-pager diff --name-status --diff-filter=ACDMRT ${{github.event.pull_request.base.sha}} ${{github.sha}})
+             echo "$diff" 
+             echo 'DIFF<<EOF' >> $GITHUB_ENV
+             echo "$diff" >> $GITHUB_ENV
+             echo 'EOF' >> $GITHUB_ENV   
+
       - name: Send mail  
         uses: dawidd6/action-send-mail@v3
         with:
