--- a/.github/workflows/email.yml
+++ b/.github/workflows/email.yml
@@ -54,6 +54,7 @@ jobs:
              git checkout main
              git remote add upstream https://github.com/chapel-lang/chapel
              git fetch upstream main 
+             git merge upstream main
              head_sha=$(git rev-parse upstream/main)
              diff=$(git --no-pager diff --name-status --diff-filter=ACDMRT $head_sha ${{github.sha}})
              echo "$diff" 
