--- a/frontend/test/resolution/CMakeLists.txt
+++ b/frontend/test/resolution/CMakeLists.txt
@@ -17,6 +17,7 @@
 
 comp_unit_test(testCallInitDeinit)
 comp_unit_test(testCanPass)
+comp_unit_test(testCatch)
 comp_unit_test(testClasses)
 comp_unit_test(testConstChecking)
 comp_unit_test(testCopyElision)
@@ -51,6 +52,7 @@ comp_unit_test(testReductions)
 comp_unit_test(testResolve)
 comp_unit_test(testReturnTypes)
 comp_unit_test(testScopeResolve)
+comp_unit_test(testScopeTypes)
 comp_unit_test(testSplitInit)
 comp_unit_test(testTaskIntents)
 comp_unit_test(testTuples)
@@ -59,4 +61,3 @@ comp_unit_test(testTypeConstruction)
 comp_unit_test(testTypeOperators)
 comp_unit_test(testTypeQueries)
 comp_unit_test(testVarArgs)
-comp_unit_test(testCatch)
