read verbose makefiles env var again, mark more cmake messages verbose
Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,19 @@ endif()
 
 ###### ENV VARIABLES TO CHANGE CMAKE BEHAVIOR #####
 # CMAKE_VERBOSE_MAKEFILE          turn verbose makefiles on to see compiler flags
-# CHPL_CMAKE_PRINTCHPLENV_RESULTS hide or display output from printchplenv
 #######
+
+### BEGIN Debug options ###
+
+# Turns on verbose output from Makefile builds. Having it ON displays each
+# command line as it is launched.
+# https://cmake.org/cmake/help/latest/variable/CMAKE_VERBOSE_MAKEFILE.html
+if (DEFINED ENV{CMAKE_VERBOSE_MAKEFILE})
+  set(CMAKE_VERBOSE_MAKEFILE $ENV{CMAKE_VERBOSE_MAKEFILE})
+else()
+  set(CMAKE_VERBOSE_MAKEFILE OFF)
+endif()
+### END Debug options ###
 
 
 ### BEGIN config.h value setting ###
@@ -74,24 +85,24 @@ endif()
 # a new one if they don't match.
 set(CONFIGURED_PREFIX_CONTENTS " ")
 if(NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX)
-  message(STATUS "CONFIGURED_PREFIX not found: Writing CONFIGURED_PREFIX file")
+  message(VERBOSE "CONFIGURED_PREFIX not found: Writing CONFIGURED_PREFIX file")
   file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX" "\"${CMAKE_INSTALL_PREFIX}\"")
 else()
-  message(STATUS "Reading CONFIGURED_PREFIX")
+  message(VERBOSE "Reading CONFIGURED_PREFIX")
   file(STRINGS "${CMAKE_BINARY_DIR}/CONFIGURED_PREFIX" CONFIGURED_PREFIX_CONTENTS)
-  message(STATUS "previously configured to install to ${CONFIGURED_PREFIX_CONTENTS}")
+  message(VERBOSE "previously configured to install to ${CONFIGURED_PREFIX_CONTENTS}")
 endif()
 
 # TODO: eventually remove the quotes from the file(WRITE) call below and we can be free of them!
 # TODO: Do we still need the CONFIGURED_PREFIX file for anything if we are writing it to config.h?
 string(COMPARE NOTEQUAL "\"${CMAKE_INSTALL_PREFIX}\"" ${CONFIGURED_PREFIX_CONTENTS} DO_UPDATE_PREFIX)
 if(${DO_UPDATE_PREFIX})
-    message(STATUS "CMAKE_INSTALL_PREFIX updated to ${CMAKE_INSTALL_PREFIX}: Writing CONFIGURED_PREFIX file")
+    message(VERBOSE "CMAKE_INSTALL_PREFIX updated to ${CMAKE_INSTALL_PREFIX}: Writing CONFIGURED_PREFIX file")
     file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/CONFIGURED_PREFIX" "\"${CMAKE_INSTALL_PREFIX}\"")
 else()
   message(STATUS "CMAKE_INSTALL_PREFIX is ${CMAKE_INSTALL_PREFIX}")
 endif()
-message(STATUS "Installation Mode: ${INSTALLATION_MODE}")
+message(VERBOSE "Installation Mode: ${INSTALLATION_MODE}")
 
 ### END handling installation mode - CMAKE_INSTALL_PREFIX will be written to config.h ###
 
