--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -115,11 +115,19 @@ $(CHPL_CONFIG_CHECK): | $(CHPL_BIN_DIR)
 
 COMPILER_LIB_DIR = $(CHPL_MAKE_HOME)/lib/compiler/$(CHPL_MAKE_HOST_BIN_SUBDIR)
 CMAKE_FLAGS = -DCMAKE_C_COMPILER=$(CHPL_MAKE_HOST_CC) -DCMAKE_CXX_COMPILER=$(CHPL_MAKE_HOST_CXX) -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=$(CHPL_BIN_DIR) -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=$(COMPILER_LIB_DIR) -DCHPL_CXX_FLAGS="$(COMP_CXXFLAGS)" -DCHPL_LD_FLAGS="$(LDFLAGS)"
+
+# Handling of VERBOSE flag to set CMake verbose output on or off. This logic
+# prefers the command-line argument VERBOSE=1, over the env. var
+# CMAKE_VERBOSE_MAKEFILE=OFF
 ifdef VERBOSE
 	CMAKE_FLAGS += -DCMAKE_VERBOSE_MAKEFILE=ON
 	CMAKE_FLAGS += -DCMAKE_MESSAGE_LOG_LEVEL=VERBOSE
 else
-	CMAKE_FLAGS += -DCMAKE_VERBOSE_MAKEFILE=OFF
+	ifdef CMAKE_VERBOSE_MAKEFILE
+		CMAKE_FLAGS += -DCMAKE_VERBOSE_MAKEFILE=$(CMAKE_VERBOSE_MAKEFILE)
+	else
+		CMAKE_FLAGS += -DCMAKE_VERBOSE_MAKEFILE=OFF
+	endif
 	CMAKE_FLAGS += -DCMAKE_MESSAGE_LOG_LEVEL=STATUS
 endif
 
