add quiet flag to allow overriding env var
Signed-off-by: arezaii <ahmad.rezaii@hpe.com>

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -117,18 +117,24 @@ COMPILER_LIB_DIR = $(CHPL_MAKE_HOME)/lib/compiler/$(CHPL_MAKE_HOST_BIN_SUBDIR)
 CMAKE_FLAGS = -DCMAKE_C_COMPILER=$(CHPL_MAKE_HOST_CC) -DCMAKE_CXX_COMPILER=$(CHPL_MAKE_HOST_CXX) -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=$(CHPL_BIN_DIR) -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=$(COMPILER_LIB_DIR) -DCHPL_CXX_FLAGS="$(COMP_CXXFLAGS)" -DCHPL_LD_FLAGS="$(LDFLAGS)"
 
 # Handling of VERBOSE flag to set CMake verbose output on or off. This logic
-# prefers the command-line argument VERBOSE=1, over the env. var
-# CMAKE_VERBOSE_MAKEFILE=OFF
+# prefers the command-line arguments VERBOSE=1 or QUIET=1, over the env. var
+# CMAKE_VERBOSE_MAKEFILE=OFF or CMAKE_VERBOSE_MAKEFILE=ON
 ifdef VERBOSE
 	CMAKE_FLAGS += -DCMAKE_VERBOSE_MAKEFILE=ON
 	CMAKE_FLAGS += -DCMAKE_MESSAGE_LOG_LEVEL=VERBOSE
 else
-	ifdef CMAKE_VERBOSE_MAKEFILE
-		CMAKE_FLAGS += -DCMAKE_VERBOSE_MAKEFILE=$(CMAKE_VERBOSE_MAKEFILE)
-	else
+	ifdef QUIET
 		CMAKE_FLAGS += -DCMAKE_VERBOSE_MAKEFILE=OFF
+		CMAKE_FLAGS += -DCMAKE_MESSAGE_LOG_LEVEL=WARNING
+	else
+# Neither VERBOSE nor QUIET was specified, look for env var and use its value
+		CMAKE_FLAGS += -DCMAKE_MESSAGE_LOG_LEVEL=STATUS
+		ifdef CMAKE_VERBOSE_MAKEFILE
+			CMAKE_FLAGS += -DCMAKE_VERBOSE_MAKEFILE=$(CMAKE_VERBOSE_MAKEFILE)
+		else
+			CMAKE_FLAGS += -DCMAKE_VERBOSE_MAKEFILE=OFF
+		endif
 	endif
-	CMAKE_FLAGS += -DCMAKE_MESSAGE_LOG_LEVEL=STATUS
 endif
 
 ifeq ($(shell test -e $(CHPL_MAKE_HOME)/configured-prefix; echo "$$?"), 0)
