factor out sphinx filtering to one place
Signed-off-by: Jade Abraham <jade.abraham@hpe.com>

--- a/frontend/lib/util/CMakeLists.txt
+++ b/frontend/lib/util/CMakeLists.txt
@@ -36,4 +36,5 @@ target_sources(ChplFrontend-obj
                subprocess.cpp
                terminal.cpp
                version-info.cpp
+               filtering.cpp
               )
