--- a/test/ANNOTATIONS.yaml
+++ b/test/ANNOTATIONS.yaml
@@ -2331,6 +2331,8 @@ arkouda: &arkouda-base
     - 2060 add pdarray data type and size to metric (Bears-R-Us/arkouda#2067)
   02/28/23:
     - Parallelize array deinitialization (#21670)
+  03/25/23:
+    - Add initial aggregation support for bigint (Bears-R-Us/arkouda#2290)
   03/28/23:
     - Upgrade Arkouda release testing from 1.29 to 1.30 (#21969)
 
